Big update to next shadcn-svelte
Update with fixes and enchantments to support Svelte v5 and shadcn-svelte update to Svelte v5.

--- a/components.json
+++ b/components.json
@@ -1,14 +1,17 @@
 {
-	"$schema": "https://shadcn-svelte.com/schema.json",
+	"$schema": "https://next.shadcn-svelte.com/schema.json",
 	"style": "new-york",
 	"tailwind": {
 		"config": "tailwind.config.ts",
-		"css": "src/app.scss",
+		"css": "src\\app.css",
 		"baseColor": "zinc"
 	},
 	"aliases": {
 		"components": "$shared/components",
-		"utils": "$shared/utils"
+		"utils": "$shared/utils",
+		"ui": "$shared/components/ui",
+		"hooks": "$shared/hooks"
 	},
-	"typescript": true
+	"typescript": true,
+	"registry": "https://next.shadcn-svelte.com/registry"
 }
