--- a/package.json
+++ b/package.json
@@ -23,41 +23,41 @@
 	"devDependencies": {
 		"@internationalized/date": "^3.6.0",
 		"@sveltejs/adapter-static": "^3.0.6",
-		"@sveltejs/kit": "^2.9.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.1",
+		"@sveltejs/kit": "^2.12.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.2",
 		"@types/eslint": "^9.6.1",
-		"@types/node": "^22.10.1",
+		"@types/node": "^22.10.2",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "^1.0.0-next.65",
+		"bits-ui": "^1.0.0-next.72",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "^8.5.1",
-		"eslint": "^9.16.0",
+		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.1",
-		"formsnap": "^2.0.0-next.1",
+		"formsnap": "^2.0.0",
 		"gh-pages": "^6.2.0",
 		"globals": "^15.13.0",
-		"lucide-svelte": "^0.464.0",
+		"lucide-svelte": "^0.468.0",
 		"mode-watcher": "^0.5.0",
 		"paneforge": "^1.0.0-next.1",
-		"prettier": "^3.4.1",
+		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.2",
 		"prettier-plugin-tailwindcss": "^0.6.9",
-		"sass-embedded": "^1.81.1",
-		"svelte": "^5.5.2",
+		"sass-embedded": "^1.83.0",
+		"svelte": "^5.14.0",
 		"svelte-check": "^4.1.1",
 		"svelte-radix": "^2.0.1",
 		"svelte-sitemap": "^2.6.0",
 		"svelte-sonner": "^0.3.28",
-		"sveltekit-superforms": "^2.21.0",
+		"sveltekit-superforms": "^2.22.0",
 		"tailwind-merge": "^2.5.5",
 		"tailwind-variants": "^0.3.0",
-		"tailwindcss": "^3.4.15",
+		"tailwindcss": "^3.4.16",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.17.0",
+		"typescript-eslint": "^8.18.1",
 		"vaul-svelte": "^1.0.0-next.3",
-		"vite": "^6.0.2",
-		"zod": "^3.23.8"
+		"vite": "^6.0.3",
+		"zod": "^3.24.1"
 	}
 }
