--- a/package.json
+++ b/package.json
@@ -23,34 +23,37 @@
 	"devDependencies": {
 		"@internationalized/date": "^3.7.0",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.16.1",
+		"@sveltejs/kit": "^2.17.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/eslint": "^9.6.1",
-		"@types/node": "^22.10.10",
+		"@types/node": "^22.13.1",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^1.0.0-next.78",
 		"clsx": "^2.1.1",
-		"eslint": "^9.19.0",
+		"eslint": "^9.20.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
 		"gh-pages": "^6.3.0",
 		"globals": "^15.14.0",
-		"lucide-svelte": "^0.474.0",
+		"lucide-svelte": "^0.475.0",
 		"mode-watcher": "^0.5.1",
-		"prettier": "^3.4.2",
+		"prettier": "^3.5.0",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"sass-embedded": "^1.83.4",
-		"svelte": "^5.19.3",
+		"svelte": "^5.19.9",
 		"svelte-check": "^4.1.4",
 		"svelte-sitemap": "^2.7.0",
 		"svelte-sonner": "^0.3.28",
-		"tailwind-merge": "^2.6.0",
+		"tailwind-merge": "^3.0.1",
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^3.4.17",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.21.0",
-		"vite": "^6.0.11"
+		"typescript-eslint": "^8.23.0",
+		"vite": "^6.1.0"
+	},
+	"dependencies": {
+		"@tailwindcss/vite": "^4.0.5"
 	}
 }
