--- a/package.json
+++ b/package.json
@@ -22,35 +22,36 @@
 	},
 	"devDependencies": {
 		"@internationalized/date": "^3.7.0",
+		"@lucide/svelte": "^0.479.0",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.17.2",
+		"@sveltejs/kit": "^2.19.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/eslint": "^9.6.1",
-		"@types/node": "^22.13.4",
-		"autoprefixer": "^10.4.20",
-		"bits-ui": "^1.1.0",
+		"@types/node": "^22.13.10",
+		"autoprefixer": "^10.4.21",
+		"bits-ui": "^1.3.11",
 		"clsx": "^2.1.1",
-		"eslint": "^9.20.1",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^2.46.1",
+		"eslint": "^9.22.0",
+		"eslint-config-prettier": "^10.1.1",
+		"eslint-plugin-svelte": "^3.1.0",
 		"gh-pages": "^6.3.0",
-		"globals": "^15.15.0",
-		"lucide-svelte": "^0.475.0",
+		"globals": "^16.0.0",
+		"lucide-svelte": "^0.479.0",
 		"mode-watcher": "^0.5.1",
-		"prettier": "^3.5.1",
+		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"sass-embedded": "^1.85.0",
-		"svelte": "^5.20.1",
-		"svelte-check": "^4.1.4",
+		"sass-embedded": "^1.85.1",
+		"svelte": "^5.23.0",
+		"svelte-check": "^4.1.5",
 		"svelte-sitemap": "^2.7.0",
 		"svelte-sonner": "^0.3.28",
-		"tailwind-merge": "^3.0.1",
-		"tailwind-variants": "^0.3.1",
+		"tailwind-merge": "^3.0.2",
+		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^3.4.17",
 		"tailwindcss-animate": "^1.0.7",
-		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.24.0",
-		"vite": "^6.1.0"
+		"typescript": "^5.8.2",
+		"typescript-eslint": "^8.26.1",
+		"vite": "^6.2.1"
 	}
 }
